vs.yaml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1beta1
  kind: VirtualService
  metadata:
    labels:
      app: gdx-pdf
      chart: gdx-pdf-0.1.6
      heritage: Tiller
      release: gdx-pdf-pm-tjms-hml-pg
    name: gdx-pdf-pm-tjms-hml-pg
    namespace: pm-tjms-hml-pg
  spec:
    gateways:
    - tj-istio-gateway.istio-system.svc.cluster.local
    hosts:
    - pm-tjms-hml-pg.saj6.softplan.com.br
    http:
    - match:
      - uri:
          prefix: /gdxpdf
      route:
      - destination:
          host: gdx-pdf-pm-tjms-hml-pg
          port:
            number: 80
